force-app/main/default/objects/UPP_Statement__c/UPP_Statement__c.object-meta.xml
<CustomObject>
    <label>UPP Statement</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>UPP Statement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPP Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>