force-app/main/default/objects/UPP_Statement__c/fields/Statement_date__c.field-meta.xml
<CustomField>
    <fullName>Statement_date__c</fullName>
    <label>Statement date</label>
    <type>Date</type>
</CustomField>