force-app/main/default/objects/UPP_Statement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Link__c</columns>
    <columns>User__c</columns>
    <columns>Statement_date__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>